Added since 0.0.1
- Allow pin to only be active during a particular time of day

v1.0.0
- Initial Version